--- a/360View.css
+++ b/360View.css
@@ -1,11 +1,25 @@
+html,body{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #000;
+}
 .contain{
-    width:100%;
+    margin: 0;
+    width: 100%;
+    height:100%;
+    overflow: hidden;
+    background-color: #000;
+    position:relative;
 }
 .sideNavOpen{
+    position:relative;
     font-size:30px;
-    margin:10px;
+    margin:10px 10px 10px 20px;
     border:none;
     background:none;
+    z-index:2;
 }
 .sideNavClose{
     font-size:30px;
@@ -27,26 +41,89 @@
     transition: 0.5s;
 }
 .tablink {
-    background-color: #555;
+    background-color: #111;
     color: white;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    font-size: 17px;
+    font-size: 12px;
     width: 33.33%;
+    overflow-x:hidden;
 }
 .tablink:hover {
-    background-color: #777;
+    background-color: #222;
 }
 .tabContent {
-    color: white;
+    background-color:#444;
+    height:100% !important;
+    color:white;
     display: none;
     padding: 100px 20px;
     height: 100%;
-  }
-@media screen and (max-height: 450px) {
-    .sideNav {padding-top: 15px;}
-    .sideNav a {font-size: 18px;}
+}
+.addFormPlace{
+    height:0px;
+    width:100%;
+    margin-top:10px;
+    overflow-y: hidden;
+    transition:height 0.5s;
+}
+.addFormPoint{
+    height:0px;
+    width:100%;
+    margin-top:10px;
+    overflow-y: hidden;
+    transition:height 0.5s;
+}
+.canvas{
+    overflow: hidden;
+    position:absolute;
+    top:0;
+    height:100%;
+    width:100%;
+    z-index:0;
+    transition:0.5s;
+}
+#panorama{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:0;
+}
+.minimap{
+    z-index:2;
+    position:absolute;
+    width:300px;
+    height:300px;
+    left:20px;
+}
+.judulMap{
+    text-align: center;
+    width:90%;
+    margin:15px;
+}
+#minimap{
+    opacity:0.9;
+}
+.mapPoint{
+    width:12px;
+    height:12px;
+    border:none;
+    border-radius: 50%;
+    position:absolute;
+    background-color:green;
+    z-index:5;
+}
+ul{
+    padding-left: 0px;
+}
+li{
+    list-style-type:none;
+}
+textarea{
+    resize: none;
 }
