--- a/360View.css
+++ b/360View.css
@@ -118,6 +118,37 @@ html,body{
     background-color:green;
     z-index:5;
 }
+.placeName{
+    width:100%;
+    padding:5px;
+    font-size:24px;
+    font-weight: bold;
+}
+.placeName:hover{
+    background-color:#555;
+    cursor:pointer;
+}
+.pointName{
+    width:100%;
+    padding:5px;
+    font-size:24px;
+    font-weight: bold;
+}
+.pointName:hover{
+    background-color:#555;
+    cursor:pointer;
+}
+.cursorPoint{
+    width:12px;
+    height:12px;
+    border:none;
+    border-radius: 50%;
+    display:none;
+    position:absolute;
+    left:20px;
+    background-color:green;
+    z-index:5;
+}
 ul{
     padding-left: 0px;
 }
