tambah lambang map dan tab place

--- a/css/360View.css
+++ b/css/360View.css
@@ -68,6 +68,10 @@ html,body{
     padding: 15px;
     float: right;
 }
+.path{
+    margin:10px 0;
+    font-size:15px;
+}
 .add{
     display:inline-block;
 }
@@ -201,6 +205,27 @@ html,body{
     width:60px;
     height:60px;
     cursor:pointer;
+}
+.pointOption{
+    background-color:white;
+    margin:10px 0 5px 0;
+    border-radius: 10px;
+    height:0;
+    overflow: hidden;
+    transition:0.5s;
+}
+.pointOptionRow{
+    text-align:center;
+}
+.pointOptionIcon{
+    display:inline-block;
+    text-align:center;
+    padding:7px;
+    border-radius:50%;
+    margin:3px;
+}
+.pointOptionIcon:hover{
+    background-color:grey;
 }
 .placeHeader{
     width:100%;
