--- a/css/360View.css
+++ b/css/360View.css
@@ -1,4 +1,5 @@
 html,body{
+    font-family:'Lucida Casual', 'Comic Sans MS';
     margin: 0;
     width: 100%;
     height: 100%;
@@ -29,6 +30,10 @@ html,body{
     color:white;
     transition:0.5s;
 }
+.logout{
+    float:right;
+    margin:17px 10px 0 0;
+}
 .sideNav{
     height: 100%;
     width: 0;
@@ -48,7 +53,7 @@ html,body{
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    font-size: 12px;
+    font-size: 14px;
     width: 25%;
     overflow-x:hidden;
 }
@@ -112,13 +117,13 @@ html,body{
     position:absolute;
     overflow: hidden;
     width: 3000px;
-    height:1000px;
+    height:3000px;
 }
 .mapPetraImage{
     position:absolute;
     overflow: hidden;
     width: 3000px;
-    height:1000px;
+    height:3000px;
 }
 #panorama{
     position:absolute;
@@ -175,7 +180,7 @@ input {
     font-weight: bold;
     display:inline;
 }
-.checkbox{
+.gedungCB{
     border:1px solid black;
     background-color:grey;
     display:none;
@@ -253,6 +258,18 @@ input {
     transition: 0.5s;
     background-color:#555;
 }
+.placeCB{
+    border:1px solid black;
+    background-color:grey;
+    display:none;
+    width:23px;
+    height:23px;
+    padding:1px 4px 1px 4px;
+    float:right;
+    font-size:14px;
+    margin:3px;
+    text-align: center;
+}
 .placeName:hover{
     background-color:#666;
     cursor:pointer;
@@ -260,8 +277,8 @@ input {
 .pointHeader{
     font-family:'Lucida Casual', 'Comic Sans MS';  
     width:100%;
-    padding:5px;
-    font-size:20px;
+    padding:10px;
+    font-size:14px;
     font-weight: bold;
     display:inline;
 }
@@ -274,6 +291,18 @@ input {
     overflow: hidden;
     transition: 0.5s;
     background-color:#555;
+}
+.pointCB{
+    border:1px solid black;
+    background-color:grey;
+    display:none;
+    width:17px;
+    height:17px;
+    /* padding:1px 4px 1px 4px; */
+    float:right;
+    font-size:10px;
+    margin:3px;
+    text-align: center;
 }
 .pointName:hover{
     background-color:#666;
@@ -292,9 +321,21 @@ input {
 .linkHeader{
     width:100%;
     padding:5px;
-    font-size:16px;
+    font-size:14px;
     font-weight: bold;
     display:inline;
+}
+.linkCB{
+    border:1px solid black;
+    background-color:grey;
+    display:none;
+    width:17px;
+    height:17px;
+    /* padding:1px 4px 1px 4px; */
+    float:right;
+    font-size:10px;
+    margin:3px;
+    text-align: center;
 }
 .cursorGedung{
     position:absolute;
